# AI_TWEET_SCRAIPING_MATOME

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: database.py  init_db.py  main.py
backend/api/: __init__.py  items.py  mentions.py
backend/ingest/: __main__.py  manager.py  rss.py
backend/models/: __init__.py  base.py  item.py  mention.py  source.py
backend/schemas/: item.py  mention.py  source.py
backend/services/: scoring.py
backend/utils/: summary.py  url.py
config/: sources.yaml
frontend/: app.js  index.html  styles.css
tests/: test_scoring.py  test_utils.py
